test/bad/foreach_iter_type.lat
int main() {
    string[] s = new string[1];
    for (int a : s) {
    }
    return 0;
}
